--- a/WhereToPlay/app/src/main/res/layout/fragment_deal_detail_list.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_deal_detail_list.xml
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_deal_detail"
+
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+        android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
-</layout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_deal_detail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+        <RelativeLayout
+            android:id="@+id/rrrrrr"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+
+                android:src="@drawable/nodate" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/iv"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:text="暂无相关数据" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+
