--- a/WhereToPlay/app/src/main/res/layout/packageadapter.xml
+++ b/WhereToPlay/app/src/main/res/layout/packageadapter.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:layout_weight="1"
+            android:singleLine="true"
             android:textColor="#ff333333"
             tools:text="002" />
 
