--- a/WhereToPlay/app/src/main/res/layout/item_drink.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_drink.xml
@@ -6,61 +6,62 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_44"
-        android:paddingLeft="@dimen/margin_15"
-        android:paddingRight="@dimen/margin_15"
         android:background="@color/white"
-        >
+        android:paddingLeft="@dimen/margin_15"
+        android:paddingRight="@dimen/margin_15">
 
         <TextView
             android:id="@+id/tv_drinks_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxEms="8"
+            android:singleLine="true"
             android:text="@string/drinks_name"
-            android:textSize="@dimen/textsize_levelmedium"
             android:textColor="@color/text_black"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/textsize_levelmedium"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/tv_drinks_action"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gl_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.33"/>
+            app:layout_constraintGuide_percent="0.33" />
 
         <TextView
             android:id="@+id/tv_drinks_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/drinks_price"
-            android:textSize="@dimen/textsize_levelmedium"
             android:textColor="@color/text_black"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/textsize_levelmedium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/gl_1"
-            app:layout_constraintRight_toLeftOf="@+id/gl_2"/>
+            app:layout_constraintRight_toLeftOf="@+id/gl_2"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.constraint.Guideline
             android:id="@+id/gl_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.67"/>
+            app:layout_constraintGuide_percent="0.67" />
 
         <TextView
             android:id="@+id/tv_drinks_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/textsize_levelmedium"
             android:textColor="@color/text_red"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/textsize_levelmedium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tv_drinks_name"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
