--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -7,33 +7,8 @@
     android:padding="@dimen/padding_15">
 
     <LinearLayout
-        android:id="@+id/ll"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
-
-        <TextView
-            android:id="@+id/tv_item_integral_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#333333"
-            android:textSize="12dp" />
-
-        <TextView
-            android:id="@+id/tv_item_integral_get_way"
-            android:layout_width="@dimen/width_0"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:text="@string/get_integral_way"
-            android:textColor="#333333"
-            android:textSize="12dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-
+android:id="@+id/ll_right"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
@@ -58,6 +33,35 @@
             android:textSize="12sp" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_toLeftOf="@+id/ll_right"
+        android:layout_width="match_parent"
+        android:layout_marginRight="4dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true">
+
+        <TextView
+            android:id="@+id/tv_item_integral_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#333333"
+            android:textSize="12dp" />
+
+        <TextView
+            android:id="@+id/tv_item_integral_get_way"
+            android:layout_width="@dimen/width_0"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:text="@string/get_integral_way"
+            android:textColor="#333333"
+            android:textSize="12dp" />
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
 
